# react-native-module-c-wrapper

./: .gitignore  README.md
01-native-bindings/: .gitignore  README.md
01-native-bindings/c-library/: .gitignore  Makefile  caesar.c  caesar.h
01-native-bindings/jni-implementation/: .gitignore  README.md  build.gradle.kts  consumer-rules.pro  run-tests.sh  settings.gradle.kts  setup.sh
01-native-bindings/jni-implementation/src/main/cpp/: CMakeLists.txt  caesar_jni.c
01-native-bindings/react-native-test/: README.md  app.json  package.json
01-native-bindings/react-native-test/android/: settings.gradle
01-native-bindings/react-native-test/android/app/: build.gradle
01-native-bindings/react-native-test/ios/: Podfile
01-native-bindings/react-native-test/ios/CaesarRnExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
01-native-bindings/react-native-test/ios/CaesarRnExample.xcodeproj/: project.pbxproj
01-native-bindings/react-native-test/src/: App.tsx
01-native-bindings/scripts/: README.md  compile-android.sh  compile-ios.sh
01-native-bindings/swift-implementation/: .gitignore  Caesar.podspec  Package.swift  README.md  run-tests.sh  setup.sh
01-native-bindings/swift-implementation/Sources/Caesar/: Caesar.swift
01-native-bindings/swift-implementation/Tests/CaesarTests/: CaesarTests.swift
01-native-bindings/turbo-module-library-gen/: .gitignore  CONTRIBUTING.md  CaesarRn.podspec  LICENSE  README.md  package.json  setup.sh  tsconfig.json
01-native-bindings/turbo-module-library-gen/.github/ISSUE_TEMPLATE/: config.yml
01-native-bindings/turbo-module-library-gen/android/: build.gradle
01-native-bindings/turbo-module-library-gen/ios/: CaesarRn.h  CaesarRn.mm  CaesarRnSwiftBridge.swift
01-native-bindings/turbo-module-library-gen/src/: NativeCaesarRn.ts  index.tsx
01-native-bindings/turbo-module-library-gen/src/__tests__/: index.test.tsx
02-turbo-module-cpp-cross-compiled/: .gitignore  Caesar.podspec  README.md  docker-compose.yml  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json
02-turbo-module-cpp-cross-compiled/caesar-cipher/domain/: README.md  caesar.c  caesar.h
02-turbo-module-cpp-cross-compiled/caesar-cipher/domain/tests/: test_caesar.c
02-turbo-module-cpp-cross-compiled/caesar-cipher/infrastructure/cpp-adapter/: CMakeLists.txt  CaesarCipher.cpp  CaesarCipher.h  README.md
02-turbo-module-cpp-cross-compiled/caesar-cipher/infrastructure/cpp-adapter/tests/: CaesarCipherTest.cpp
02-turbo-module-cpp-cross-compiled/caesar-cipher/infrastructure/turbo-module/: README.md
02-turbo-module-cpp-cross-compiled/caesar-cipher/infrastructure/turbo-module/android/: CMakeLists.txt  build.gradle
02-turbo-module-cpp-cross-compiled/caesar-cipher/infrastructure/turbo-module/android/src/main/java/com/nicovegasr/caesar/: CaesarPackage.kt
02-turbo-module-cpp-cross-compiled/caesar-cipher/infrastructure/turbo-module/cpp/: CaesarTurboModule.cpp  CaesarTurboModule.h
02-turbo-module-cpp-cross-compiled/caesar-cipher/infrastructure/turbo-module/ios/: CaesarModuleProvider.h  CaesarModuleProvider.mm
02-turbo-module-cpp-cross-compiled/caesar-cipher/infrastructure/turbo-module/js/: NativeCaesar.ts  index.tsx
02-turbo-module-cpp-cross-compiled/react-native-example-test/: README.md
02-turbo-module-cpp-cross-compiled/react-native-example-test/CaesarExample/: .yarnrc.yml  App.tsx  README.md  app.json  package.json
02-turbo-module-cpp-cross-compiled/react-native-example-test/CaesarExample/android/: settings.gradle
02-turbo-module-cpp-cross-compiled/react-native-example-test/CaesarExample/android/app/: build.gradle
02-turbo-module-cpp-cross-compiled/react-native-example-test/CaesarExample/ios/: Podfile
02-turbo-module-cpp-cross-compiled/react-native-example-test/CaesarExample/maestro/: parity.yml
(+18 files in other folders)
